adaptive to 768px

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "vinyl-ftp": "^0.6.0"
+  },
+  "dependencies": {
+    "jquery.mmenu": "^7.0.1"
   }
 }
